Fixed the multi selection bug

--- a/src/GUI/MainForm.resx
+++ b/src/GUI/MainForm.resx
@@ -233,6 +233,114 @@
         vh6mGEvIBARkAyRyAgRSgbgHpI7zLhF6mH0BMhrJZCCSERlozWwAuMRswQX9awAAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="unselectButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAABfYSURBVHhe7Z0rkyzFFoWPwfADEBgU8igUCo3AEzjE0Rgc
+        HoXBYRE4/gAKjcUcg8cgMQSi7/363pyoqcnq2q/cldW9V8SKM3Gmpx6ZuTL3K7NfXQqFwiZKIEn4559/
+        Ln/++efl999/v/z666+Xn3/++fLjjz9efvjhh8v3339/+e677y7ffvvtlfzM//E7PsNn+Rv+lmtwrUIO
+        SiCB+Ouvv64DmYH99ddfXz7//PPLRx99dHnvvfcur169CiXX5Nrcg3txT+7NMxTiUAIxgpmcmZ3B+emn
+        n17ef//97kA+gjwLz/TNN99cn7FEY0cJRAgEgbnz5ZdfXj788MPuwJyZPDPPzjvwLgUZSiAb+Pfff68m
+        CyvE69evu4PuzOSdeDfekXct9FECWYCB8ssvv1zevHkzxG+Ylbwr71xieYkSyH/x22+/PZwotkgbfPXV
+        V9c2KTywQP7+++9r5IdIUG+gFF9d24Y2oq0eFQ8nkLdv315Xi3fffbc7KIovSVvRZrTdo+FhBIJ9/dln
+        n3UHQFFO2pC2fBTcvUBwuj/++ONuZxftpE1p23vH3QqEWa6EMZ6ffPLJXa8odycQoi90Wq8zi+NI5p5a
+        sXvD3QiE7DCZ4l7nFfOIM39PmfrTC4TKVipgZ4xKUROFmffFF19c66IIma4rc6mTIoy6TNDxM//H7/jM
+        sgKYa3Atrsm1Z6oBa6QvqEi+h6TjqQWCOTVDGcg777xzHawk2BjAPFdm7oB7cU/uzTPwLDxT71kzSd+c
+        PeF4SoEwIBgIvU7JIDMk4U5mSQbAjPszaCNWHVZX/IMjV1hqvjInjEicTiB0+gcffNDtiJGkGpaOJrR5
+        xg1LPDPPzsRyRDUyfXbGaNdpBEIHM0B7jT+KDCTs/XuMzvBOvFu2WLjnmXyTUwiEEoesmqlWVnF221kD
+        3jWz/Ia+/OOPP/5/97kxvUB++umnlI6j09hMdFZbOQK8O45+xmREnxKVmx3TCoRlOMMRf7TaIilok4za
+        NczmmU2uKQVC7H90Npyk4iNWp2pBG5Fz6bVhFOnrWffNTycQnMeRUSo6u4ShB23GCSq9No0gfT5jMGQq
+        gRCGHOVvzFArxCyJQ4z5gv2Nf4XNTz6F6A4mJeRn8hf8Dr9optmVNhy1utP3s5m70wiEwTAi+0sYM9MZ
+        xJ5mtuWeDHJMOTLbnu28M654vN+IEDFjgElhFkwhEAZSr7E8pKG5bkZSj1mVVWBUxnrW4j/aljYeMbFx
+        3RlwuEAwJ3oN5CEmwMg4O9fmaFCiPBkHPcweemaFG2F2MTaOxqECiQ7jMntjqo0AfgDXxlzq3Xskz5J5
+        pn2iV1DGyJE4TCBkbnsNYuWI7CwmBLY20ZujqmMZcGcCq0l0opGxchQOEUj0yhFd34PNTwJrhnOyeIaz
+        YUTd3FErSbpAIhuOwRN5cADCoCOOWi16JFJ0VkSH7Y/wSVIFEhmtijSpuA7L+EzCaOQ9zwzaNnJTW3Z0
+        K00gOHC9F7YQnyAiskPnjS6j8JLo0NlBX0Vm4TPzJCkCYamNmp2jllkaeUTOIpqEko8G/Rfh40WZ14yl
+        rIz7cIGQRIsYiDRKZAiXBu7dZzYy8x6J1k6YSRGDMsqSYExlVBgMFQhOb8SpG4hjRLnI7OYVPDLEyaqx
+        9h9oM29mn76MsCgocBxdpzZMIDRuRHaVmSIyUrUEHT27mYVZchQon+k9E23mnbCizG7G2MhE6jCBROQ6
+        6IjRtiYlI717z8Kjyi0kkwd97Kl1o28jJqiRk8gQgVDG3XsRDTPEAZh9MraYWsksfgSkUSdvuJ0+jlhJ
+        RpjgIFwgOE7eWYEGG2VW9cAejd5zjGBrG5KcDEJ8DGZAVgpK4yE/Mzvzu8x2aOCe6+e+Rd6JSdGKCHOL
+        Z4jKiy0RKhCWW+9sTEONmg1ugcHYex4vcXKJ3DBTep3bDNCH1n0etKHVH6DPe9fUkELSaH8kVCDMfL0H
+        1zAylKsB0RBv7RWTAzM/M+JZT0fxVjuQt7G+e0QIONpnCxMIM2TvgTU8yiFtIHnYe65bRBQ4+iOW92zw
+        Dl7zGDKTW8OvEcnESN81RCDMGN6DFo5OiDVI93sg5hm3wnoQecwPpqXVpPSWpWAiRq3gIQLxhnSZhWcx
+        Scj8bzmMdDqrzMi4+1GI8AHWZNK0TCKMhXWCUsuo0K9bIN4I0KjogwdrwbOqHBFNykKEBbBF/DqLSCLM
+        vYjjY10CIeLhVfqMA48B00pkjoioZSMiuHKLtKVlEtSGm9dkbHpXe5dAvBGPo53yW6BD79GU6oHoUYRz
+        fov4BRbH3eu0exOtZoF465hGxKwLdtCfo7/jkT7X+pre3Bpj1FPQaBaIpzFn9DsK/4Ml1K0hZ4dpJ0Z8
+        GE+m3VMRbRKI1zE/KhlYkIFZ3htqvUVK5rXwFpVaj501CcRTxn4PW0gfBUxk3hqpLVomSWmOqkdWLgvU
+        AvFkzGnsMq3OhVGFnIwFbRjWa2pZMuxqgXhUPMt5qwUdcOC9Rag9WjLenpC0xXpRCcQTl6YxPJtrCseC
+        gYyZ0utbD7UlRjyHJ6mpzbupBOJZPR4h4XbvYIIbsY9f6494ymIYwxqIBeLxPbQOUvuSlvJX5oR3W8Ca
+        +BXaKJMnUKTxfcQC8VR6Wl+efEmtPHMiOqmo9Q88wQPNWWMigRA96N1IQm3Mu5eo8h4OUIgHyb7I8nhI
+        32vgub+0gFIkEM92VE0l561dfURRyuSaCzjMHr90TfpeUxaCZdK7joTS7PquQGgEa80Vy7AGe0Isk2s+
+        MKB7fWUl1oIG1ow/Y0kSYt4VCBGG3g0k1KweGpsSp1/ycoUc0M/WSbRHjRPtWUUk0bNdgVj3e2gcIWBJ
+        RGlt1sI4eEKva2pDsdb8DGNuDzcF4okUaNL6nsYlAXmG43QeAR5fdU1NQs+TwN6LsN4UiPWFJcpcIqKM
+        gTKW2l9yLCJ2mDZqVxHrffd8nk2BMNisCSGN6ePdVrlkRbmOR1R/4tNo+tPqKzPGb02smwKxvqg0OtDg
+        yYguWYWQ88BTUMj44e+1uwA90dZb7sCmQKzmlTS+DDw+zpJVCDkXGKz0Sa+vtshMziTniU5as/u3xmxX
+        IB7zShOii6oO1Th0hRxILRBOPGG3YETY3jrh3jKzugKxFiYya0jhKV9ZUlvDU8jDLfOZknX8huiV31oK
+        vzWxdwViPWpFc4yPx05dUrNiFXLRm2iZRAnijIo4Ro/drkCsITNN1W7ESX4af6dwDJpfQCg/o0zIamZt
+        pSZeCISkW+8Ce9SYV569JUtWWHd+0EfZPqJ18u0lnF8IpFduLqHmsGBrhGxJy9ExhceA9TD1Xv7uhUCs
+        oTLpLOGJVy+p3YRVeBxYc3g9k/2FQLTxa8iAl0YjIr7gExYKW2ASthwPhO+9xrORZvU/NJW7ESf21Z6Q
+        wh6sFRrrDP4zgVirajUnaFsTkI38fWXNC3uwfvPAevJ9JhBrDFmai/Bsbmms0G5BAmukdJ0PeSYQS+kH
+        tp50RvceQAwrMViQwOqHrN2FZwJp36qkoaZuP+IUjEJBCss+I3IoSzyNOOvme+kme0oLvOFd7SEQhceG
+        Nd+2dNSfBGK12aTHRlpLAJas6FVBA6tJjxYangRi3ZEl9Qki/A/tJprCYyNi0n8SiDWCJa3j95aXaPe5
+        FwpWt2EZyXoSiCWBh1MvhXdrrabWq1BosOTdll/J8CQQi8eviWBZImRLagRCQICqgGIeR+3v8MI7rp8E
+        YlGatKIWM6z39xpqStujdisW5dScopkJi2WEFhquAiHR1/vgHqU7CL0RLBI+mhmqBJLPWQVi9a3beLsK
+        hCWy96E9SkO83greXpXlLZRA8jmrQKzRUzQBrgKx1khJ8xLe/efac35LIPmcVSDWybm9z1Ug1njxMqFy
+        C9YdXo3aI/FLIPmcVSDWzVNtbF8FYi1zl+7qs+5SbFyG3SQogeRzVoFY/d9mHV0FYt2H3uy0PXg3SbFM
+        alACyeesAiH62XvePbb96VeBWMtMpKUf3hMUtadilEDyOatAvAGoq0Csnr60zITES+/vpZT6Og0lkHzO
+        KhBruQmaAFeBsGW296E9SnMT3u+M0J5gUgLJ56wCsSap2zbyq0Cs+3el8J6iqG38Ekg+LQKRWCAksVkF
+        8CWYKHG6MbmlVgWTeO9599i+TiNFIBQqUhPDv+Q0KFGhupcsJ/eG5EoI5xLx4jP4LZhmUFvmXgLJZ/Qk
+        xuY6Sj6wPhg3jBnGC6YPQZtUgYw2sbJRAsmnViDeAzykR92GmFijnfRslEDyqRWItz5Puj8oxEkfHebN
+        Rgkkn1qBWDPcjZhdEoSEeUcnCrNRAsmnViDW6o1GaX1eSKJwdKlJNkog+dQKxGq1NErLj0JKTYgI9D60
+        R20CLwslkHxqBeJNHktP2AwpVrRGFJrKZkMJJJ9agXgP8ZBuwQ4pd/c6MrOhBJJPrUC8h3hID0y3Rmib
+        f30VyOgtt9kogeRTKxDLGQhLSgtYQ7bcgpGHNmSjBJJPjUCsybslpYd4hBzaAEYf+5MJGo8lvJhH6YAF
+        1qBQo+YQj7BjfyxK0xwcVyg0eB10zSEeFstoGUJ+EojVVpu13KQwLzDNe2NJSmmS0Fpm0j161Jq4IRFT
+        KGiQdcqm1ZRbRmefBBJxsUJhDxEBFOkZBdYQ7zIB/iQQ63KkPZKn8NjwlphAaQ2g1ddZFuE+CQSM/gq2
+        QqE3hjSU7gMBlgjW5lewAeuXeJajXpAgIv8hrcGy3msdAHgmEOsRoUubrVDYgnVbxZLS+j9rkeK6OuSZ
+        QKxl723/bqFwCyQUe+NHQ6n/YZ3s1yUszwRiLVrENCsUbsE6tpbUJAitYlzvkn0mEIAT1PvDW+QECgoe
+        C4UtWE/OWVIaMcX/wDfuXeMWewJ8IRDrQdPS6srC48F69M6a0qS01VXoBQBeCMTqSFU+pLAF66alJTXh
+        XcZi7xp77CUgXwjEaitqXqDwWPAePQs1gSDrSZ69AMALgQDrC2Ud4sASShKozLr5YQ23riktp7ce0rB1
+        zlZXINbK3pE7DLFjWQKX4q0s/vzwHs4AiUhJET12uwKxFi6OMLOIjuEXbUXXpHuTC/mIiFzBdkaVBFbz
+        aisA0BUIs7V1z3BU+TuhOqox914Y4VSIeT7QJ1uTmoakEKSlTNaJnbG+tUOxKxBgrYSU1spsgcZgVdAI
+        tDL588GayV5TY7ZbUxS3IrCbArGqUaP4JchgMtAtKxf31OyJLowFfWFJ1K1Jv0pLSxg/fL53nT3eqiXc
+        FIjHzNJsouLFmCWsL9dY5S7zwPudlI2a3Jp1n8neuQqbAgHWhMtWyKyHqNkGlql1PKKOXGJMSFcPYE1N
+        7InwpkCsMWWoKYH3fo96Y5lac4A+6PWPhhpf1pNr2cvd3RQIsOzKgtKTJ0DkQW/MJBXVmgNWR53VQzPR
+        WU06SR5tVyCePcSa0/asUbMevZG0Qhwwk7S+rMb38HyVm8RX3hUIESmrA605mhRn3RoU6FHTyIXxwD+U
+        +JqMgfWejFuwHHgIGdOSaOuuQIBndtesIhFbMpfU+EGF8WC230searLmntVDamWIBOLxEaTfBNQQUbvT
+        yCyRVUBZkIFZe2vW19RcAfzc3nUklPo4IoEAz8NoBimfjQr7QuLcFdmaD9j/y37mZ8048URYNQEksUCs
+        mXWonRms+ZctUs9VIpkPCKKZXNLjRBs8loamXlAsEOB5KM3XtbEMRxS6ralJPBVyQF8jDonD3ODZoaid
+        rFUC8SRktFW3qDzS1IKsJJqgQWE+ICTP4dfawI1KIMB6nArUloJ4cjBbJIwYVZJfyIenSli7egC1QDy+
+        CCuCdga3xrlvkehW1W2dD94AjmViVAsEeKo1Jen9JUb5I5DZaGujTGEu0E/WsidorfY2CQQl9x5CSnYK
+        ajDCH2lk2S3nfX6wia7Xf1JqQshLmAQCPNl1TBytqRVxttIW8UvqhJR54TWtPGVHZoEw61prtCDLpbbq
+        1vqNQVKyDGvqgArjwRjxnKvFGPX0qVkgwLvsaZNDwBPFkJDVpHfCXuEYeJPGWnN+DZdAcJw86oYW0yZq
+        g9UtWsR7RmC+zGpeWs/YbcRK8QZhXAIBONC9h5OSJVBbBsJLe2rD9oi9a3XqzgLavLWhtsQ8A/ioHhM+
+        qg/dAgHW0+waWYU0pQaAz48SyT2vHgya3veUz7TJLCK0H9WHIQLhhawn2jVqKiwbWEmizS3KGLRinR20
+        E1UJe300Q4VBhHWAuKL6MEQgwJNhb7Sq3ruCLakpqpwdmCm0jbR2KcJm98LrlGNaRQo9TCAgIsIk2Sfc
+        gzeiBq3Z1pmACUW1gjXr7I36eBARxmcMRiJUIMw+nnKARussznZNa0KJvzvjnhGemUmFmjWc7d67aYhj
+        fERlgTdiBZkYolfAUIEAOswTfYAMVmvoEVPPMlCiZ54o0OEMWMwGBhFFlvhdnr05e9QcthEB+to6sTVa
+        oqEShAsERMwGNJi2dr+BAaUpy4906jTA3uY9EfTSgeZ5+D/vROOhte214D5eccBRvuMQgYAIx5kBYu0o
+        Zl5m29511zwqUZaR8LQy4wA++jZiEhi5+g8TCAPUs7mq0WNuATrhVhTHEl6Owoi9LpEc+eVEEWYVJLAS
+        7XcsMUwggOysNz8CaUjPEorJ1YutM3sd4ZA2ePbVZHCUXU9fRoiDsTW6AmCoQABhxyhb2huCZNZaCnbk
+        DCnBSEc7itErbFRFNmMq43yB4QIBUY4Y9JYQ4Ixjs1rK7aPhLfTMYoSPhhkUdZwTY8nqm2qRIhAQeawo
+        s5o36jTSbpUiwvwcTcxAr5lFX3nLR5bM3I6QJhAgjSpJyOw7wj7ORERibxQx/yJWDsygyDMFss3iVIGA
+        iHKURuzQUfHvDESZnZEk8hhlvtA3Uf4nPCKZmy4QEGWLNuKXHO1PaIGJ13uXo4gpFVXkR1+M6OMjcIhA
+        gOfQhx4xuTKiGlEgPNl7j0xi4tEPkZvDuFZ08OHIvSqHCQREzzKYLEdWo2qA/9R7h9GkjXCYMX8iV11W
+        RNo+2mw8auVoOFQgINInacTBjJwVR4Dn6z37KNImDOARiTXeZURO5wifY43DBQIio1uNzGQ08BFFiBJ4
+        9/LvkcgRKzQrxahsc8spjQg2HJ3EbZhCIMCzl+MWyTXMGOkihNp7XguJFJH4pPiRHEFG+Qz3GZHHYQzM
+        dOzSNAIBUdWdPRK+nGHPdQOi7T1nj7QJDjWrAtEmVgbMJUSWXUtGG44qkeE9szLkUkwlEEAkamSGGQd1
+        Fv8Exxbzh0HOezP4ID/zf/xuhow/oM0is+Fr0uczRiGnEwhgYESUyt8ipeazO/IzgDYaXZbPqjjKT/Ji
+        SoEAZs6ITVd7pHMiSiruDbQJbdNrs0ji5M+ySvYwrUAaossVtkhyi8MPZo16ZYBZnDbIqDKmT2cMnqwx
+        vUAASbVRjuGadBzRoNmcxZHgXXnnjIkI0pdnKTQ9hUAAy/CIpOIt4jhi5s0U/YoC78S7jQyI9Di7SbXG
+        aQTSwGwXWT4tJQOpJd7OaIbxzDw7dU3ZooD02RknmtMJBNDZGQ78FklmEWVjNsSZnVEwPBPPxjPyrCOS
+        sBJyX/rqjJMKOKVAGpiRMhxKCclkMzuTwGOVywxbci/uyb15hojTLSPIc5w9lH5qgQDsWep2shxMDcl+
+        M0jIIzCLMoApo2BmR9w4qi0hyAzLu0B+5v/4HZ/hs/wNf8s1uBbX5Noz7kqkL3jOM/kaWzi9QBoYUMye
+        vQ4r5hE/LXP1HI27EUgDS3pGgqv4nLT5PVYm3J1AGrDJR5erFOcrAo3G3QqkAds9K8n4SEQYTEL3jrsX
+        SAOz3Mhq1EchwYF7XjHWeBiBNFBSjTM/Y9RrVtJWtNlZykMi8XACaSCUSmHeLDmDGYlp+ugFnA8rkCWI
+        vhCenPmkwyzyVRG0xT1GpCwogSxAYgvHE3PikcTCuyKKR3C6tSiBbACx4IxSy3SPZhjvxLvxjveQ8R6F
+        EogQlH1w8gqryyz1XxryzDx71qkn94ISiBGUU1A+zixM+PiIEvIt8iw8U6s2vqfSj2yUQALBQMSOJ/LD
+        4CRnQCRohD/DNbk29+Be3JN7lxhiUQJJAnY+pg15GAYyqw8mGwObylcqkjlhEvIz/8fv+Ayf5W/acUDl
+        M+ShBFIobOJy+Q/fPfSfssFKOQAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="paintButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAYAAAA+s9J6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
